--- a/app/templates/app/item_card.html
+++ b/app/templates/app/item_card.html
@@ -38,3 +38,11 @@
         <p>{{ item.created_at|date:"Y/m/d G:i:s" }}</p>
     </div>
 </div>
+<div class="row">
+    <div class="col-3">
+        <p>图片</p>
+    </div>
+    <div class="col-9">
+        <img alt="" src="../../static/app/media/{{ item.image }}"> </img>
+    </div>
+</div>
